--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Melissa Ecker">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style/styleSheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Slabo+27px&display=swap" rel="stylesheet">
@@ -29,9 +30,7 @@
         <a class="tablinks" onclick="openTab(event, 'Contact')">Contact</a>
         
         <div class="dropdown">
-            <button class="dropbtn">Work Examples 
-                <i class="fa fa-caret-down"></i>
-            </button>
+            <button class="dropbtn">Work Examples &#9660;</button>
             <div class="dropdown-content">
                 <a class="tablinks" onclick="openTab(event, 'Writing')">Writing Examples</a>
                 <a class="tablinks" onclick="openTab(event, 'WebProject')">Web Project</a>
@@ -212,6 +211,13 @@
     <!-- Begin Accomplishments Section -->
     <div id="Accomplishments" class="tabcontent">
         <h2>Accomplishments</h2>
+        <p>Dean's List - Arkansas State University - Beebe</p>
+        <p>Chancellor's List - Arkansas State University - Beebe</p>
+        <p>Phi Theta Kappa Honor Society - Arkansas State University - Beebe</p>
+        <p>Dean's List - University of Arkansas - Little Rock</p>
+        <p>Chancellor's List - University of Arkansas - Little Rock</p>
+
+
     </div>        
   
     <!-- Begin Skills Section -->
@@ -301,6 +307,11 @@
     <!-- Begin Capstone Project -->
     <div id="Capstone" class="tabcontent">
         <h2>Capstone Project</h2>
+        <a href="assets/resources/projectCharter.pdf"=>Project Charter</a>
+        <br>
+        <a href="assets/resources/projectAnalysisDesign.pdf"=>Project Analysis and Design</a>
+
+
     </div>
 
     <!-- Begin Technical Assignments -->
