add resume in word

--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
     <!-- Begin Skills Section -->
     <div id="Resume" class="tabcontent">
         <h2>Resume</h2>
-        <h2><a href="assets/resources/melissaEckerResume.pdf" download>Download pdf</a></h2>
+        <p>Download my resume in <a href="assets/resources/eckerResume.docx" download>Microsoft Word</a> or
+        <a href="assets/resources/eckerResume.pdf" download>pdf</a> format.</p>
+
 
 
     </div>
