--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
         <h2>Profile</h2>
         <div style="display: flex; align-items: center;">
   <p><img class="img-style-1" src="assets/images/melissaEckerHeadshot3.JPG" alt="Melissa Ecker" style="width: 120px; margin-right: 10px;">
-        Aspiring software/database developer with twenty-plus years of legal experience. Embarking on a second career. Seeking to utilize my unique set of skills combining litigation, business, and technology to contribute to the success of your organization. Elevator Pitch.</p>
+        <p>Elevator Pitch.</p>
     </div> </div>
 
     <!-- Begin Skills Section -->
     <div id="Skills" class="tabcontent">
         <h2>Skills</h2>
+        <p><strong>Programming Languages</strong></p>
         <ul>
             <li>HTML5</li>
             <li>CSS</li>
@@ -63,13 +64,28 @@
             <li>Java</li>
             <li>Python</li>
             <li>C++</li>
-            <li>Linux (Ubuntu)</li>
-            <li>Visual Studio</li>
+            <li>SQL</li>
+            </ul>
+            <p><strong>Database Management</strong></p>
+            <ul>
+            <li>Oracle</li>
+            <li>Oracel APEX</li>
+            <li>Microsoft SQL Server</li>
+            </ul>
+            <p><strong>Development Tools</strong></p>
+            <ul>
             <li>GitHub</li>
             <li>Eclipse</li>
-            <li>SQL - PL/SQL</li>
-            <li>Oracle</li>
-            <li>Microsoft Office 365</li>
+            <li>Visual Studio</li>
+            </ul>
+            <p><strong>Operating Systems</strong></p>
+            <ul>
+            <li>Linux (Ubuntu)</li>
+            </ul>
+            <p><strong>Productivity Software</strong></p>
+            <ul>
+            <li>Microsoft Office Suite</li>
+            <li>WordPerfect Legal</li>
         </ul>
     </div>
 
@@ -225,6 +241,11 @@
         <h2>Resume</h2>
         <p>Download my resume in <a href="assets/resources/eckerResume.docx" download>Microsoft Word</a> or
         <a href="assets/resources/eckerResume.pdf" download>pdf</a> format.</p>
+
+        <h2>Career Objectives</h2>
+        <p>Aspiring software/database engineer with twenty-plus years of legal experience. Embarking on a second career. Seeking to utilize my unique set of skills combining litigation, business, customer service, and technology to contribute to the success of an organization.</p>
+
+        
 
 
 
