--- a/web-1/index.html
+++ b/web-1/index.html
@@ -16,7 +16,7 @@
     <ul>
       <li><a href="http://ualr.edu" title="UA Little Rock">UALR</a></li>
       <li><a href="https://blackboard.ualr.edu/ultra/courses/_278510_1/outline">Course Homepage</a></li>
-      <li><a href="https://www.w3.org/">W3C</a></li>
+      <li><a href="https://www.whitekissesgreatdanerescue.com/">White Kisses Great Dane Rescue</a></li>
       <li><a href="https://www.littlerock.gov/">Little Rock</a></li>
     </ul>
   </div>
