add to education

--- a/index.html
+++ b/index.html
@@ -122,13 +122,7 @@
         </div>
         <h2>Course Descriptions - Information Science Degree</h2>
 
-        <strong>BINS 4331 - Management of Information Resources</strong>
-        <p class="shift"> A study of a manager’s role and decisions
-              regarding information systems strategy, the management of information, technology operations, and
-              information systems projects within the organizational context of IT Audit and security. Dual listed in
-              the Graduate Catalog as BINS 5331</p>
-
-        <strong>IFSC 1105 - First Year Experience for Computing Majors</strong>
+               <strong>IFSC 1105 - First Year Experience for Computing Majors</strong>
         <p class="shift">This course builds a foundation for first-year
               and transfer students interested in the majors and options offered in computer science and information science. 
               The student’s interests may be in software development, web design, cybersecurity, e-
@@ -195,10 +189,8 @@
               and network issues such as performance, security, and management. Lab exercises are used to
               demonstrate how network concepts are implemented in practice.</p>
 
-        <strong>IFSC 3320 - Database Concepts (Oracle)</strong>
-        <p class="shift">Offers an introduction to the fundamentals and use of
-              relational databases and focuses on four major topics: ER-diagram, relational algebra, SQL language and
-              Oracle.</p>
+        <strong>BINS 3307 - Systems Development Methodologies</strong>
+        <p class="shift">Methods, tools and techniques of system development. Study the system development life cycle using traditional and nontraditional methods. Development tools will be explored as well as key development techniques for system analysis and design.</p>
 
         <strong>IFSC 3330 - Current Trends in Database Technology (Oracle)</strong>
         <p class="shift">Current trends in database design and
@@ -208,24 +200,26 @@
               data mining, data warehousing, and web search engine technology. Discussion of database management
               and distributed database management issues.</p>
 
-        <strong>IFSC 3360 - System Analysis and Design</strong>
-        <p class="shift">Fundamental concepts of object-oriented software analysis and
-              design including requirements specification, analysis, and design of software; issues in software reuse,
-              software packaging, and software management.</p>
-
-        <strong>IFSC 4330 - Database Security</strong>
+               <strong>IFSC 3342 - Mobile Web Development</strong>
+        <p class="shift">in-depth look at modem web technologies used in the creation of standards-based websites for use on desktop and mobile devices. We will evaluate and test many approaches in an effort to establish maintainable workflows and create highly usable sites using a “Mobile First” design philosophy. In addition  this course will explore various tools for testing  versioning and distributing project assets.</p>
+              
+        <strong>IFSC 4330 - Database Security (Oracle)</strong>
         <p class="shift"> Focus on security issues in databases systems and introduction of how current and future commercial systems may be designed to ensure secrecy and     confidentiality. Topics include security models, basic security mechanisms and software, statistical database security, intrusion detection, security models for next generation databases, tested techniques and proven strategies for securing an Oracle environment — from the operating system to the database to the network, and how to implement security using Oracle’s built-in tools.</p>
+
+         <strong>BINS 4331 - Management of Information Resources</strong>
+        <p class="shift"> A study of a manager’s role and decisions
+              regarding information systems strategy, the management of information, technology operations, and
+              information systems projects within the organizational context of IT Audit and security. Dual listed in
+              the Graduate Catalog as BINS 5331</p>
+
+        <strong>BINS 4350 - Business Database Management Systems</strong>
+        <p class="shift">concepts and principles underlying the design and application of relational database management systems. Provides an in-depth study of the key concepts of relational database systems.</p>
 
         <strong>IFSC 4396/4398 - Capstone Project I/II</strong>
         <p class="shift">Capstone course in which students do an analysis and design
               proposal for an information system/technology project. At the end of the second semester, students
               complete the design, implementation, documentation, and presentation of their project.</p>    
               
-        <h2>Course Descriptions - Computer Information Systems Degree</h2>
-
-        <strong>CIS 2440 - Title</strong>
-        <p class="shift"> Description</p>
-
     </div>
 
     <!-- Begin Accomplishments Section -->
