--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               and distributed database management issues.</p>
 
                <strong>IFSC 3342 - Mobile Web Development</strong>
-        <p class="shift">in-depth look at modem web technologies used in the creation of standards-based websites for use on desktop and mobile devices. We will evaluate and test many approaches in an effort to establish maintainable workflows and create highly usable sites using a “Mobile First” design philosophy. In addition  this course will explore various tools for testing  versioning and distributing project assets.</p>
+        <p class="shift">In-depth look at modem web technologies used in the creation of standards-based websites for use on desktop and mobile devices. Evaluate and test many approaches in an effort to establish maintainable workflows and create highly usable sites using a “Mobile First” design philosophy. Explore various tools for testing  versioning and distributing project assets.</p>
               
         <strong>IFSC 4330 - Database Security (Oracle)</strong>
         <p class="shift"> Focus on security issues in databases systems and introduction of how current and future commercial systems may be designed to ensure secrecy and     confidentiality. Topics include security models, basic security mechanisms and software, statistical database security, intrusion detection, security models for next generation databases, tested techniques and proven strategies for securing an Oracle environment — from the operating system to the database to the network, and how to implement security using Oracle’s built-in tools.</p>
@@ -213,7 +213,7 @@
               the Graduate Catalog as BINS 5331</p>
 
         <strong>BINS 4350 - Business Database Management Systems</strong>
-        <p class="shift">concepts and principles underlying the design and application of relational database management systems. Provides an in-depth study of the key concepts of relational database systems.</p>
+        <p class="shift">Concepts and principles underlying the design and application of relational database management systems. Provides an in-depth study of the key concepts of relational database systems.</p>
 
         <strong>IFSC 4396/4398 - Capstone Project I/II</strong>
         <p class="shift">Capstone course in which students do an analysis and design
