--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <p class="profile-text">  
     
-    During my time working in the legal industry, I gained valuable experience conducting legal research, drafting discovery documents, communicating with courts, and advocating for my clients. I have a deep respect for justice in both the civil and criminal arenas.<br><br>
+    During my time working in the legal industry, I gained valuable experience conducting legal research, drafting discovery documents, communicating with courts, and advocating for clients. I have a deep respect for justice in both the civil and criminal arenas.<br><br>
 
     I am embarking on a second career in the technology industry. My interests are heavy in software engineering, cybersecurity, and database architecture, auditing, and security.<br><br>
 
