--- a/web-1/index.html
+++ b/web-1/index.html
@@ -23,17 +23,36 @@
   <div id="content">
     <h2>My Assessment</h2>
     <p>
+      
       <img alt="Globe with maps" src="assets/images/webpage-image.jpg" /> The most important goal of effective communication is clarity. Clarity is not the same as simplicity . Often, simple things are clear if the message is intended to be brief and small, but often the message is about a complex relationship that can only be presented with a necessarily large amount of data. </p>
+
     <p class="alert"> This complexity can be made to appear clear by effective organization and presentation and need not be reduced to meaningless "bite-sized" chunks of data, as simplification usually does. </p>
+
     <p>Clarity refers to the focus on one particular message or goal at a time, rather than attempting to accomplish too much at once. Simplicity is often responsible for the "dumbing" of information rather than the illumination of it.</p>
-    <h3>Questions</h3>
+
+    <h3>Questions:</h3>
+
     <p>Please answer the following questions below. Remember to markup the information properly using HTML</p>
+
     <h4>Explain the difference between the &quot;alt&quot; attribute and the &quot;title&quot; attribute. </h4>
-    <p>Answer goes here...</p>
-    <h4>Please provide an example below of how to mark up a definition from the dictionary</h4>
-    <p>Answer goes here...</p>
+
+    <p>The "alt" attribute is to provide alternative text for images. This increases accessibility for users who might be vision impaired, using a screen reader, or the image doesn't load for some reason. The "title" attribute provides additional information about the element.</p>
+
+    <h4>Please provide an example below of how to markup a definition from the dictionary.</h4>
+
+    <p>Example: 
+    <dl>
+  <dt>Java</dt>
+  <dd>A high-level, object-oriented programming language used for building applications.</dd>  
+  <dt><dfn title="A high-level, object-oriented programming language">Java</dfn></dt>
+  <dd>The programming language widely used for web, desktop, and mobile applications.</dd>
+</dl>  
+    </p>
+
     <h4>Provide an example of link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </h4>
+
     <p>Answer goes here... </p>
+    
   </div>
   <div id="footer">
     <h6>&copy; 2025 |Melissa Ecker | <a href="#top">Back to Top</a></h6>
