--- a/web-1/index.html
+++ b/web-1/index.html
@@ -10,14 +10,14 @@
 <body>
    <div id="container">
   <div id="header">
-    <h1><a href="index.html">Melissa Ecker</a></h1>
+    <h1><a href="index.html">HTML/CSS Review</a></h1>
   </div>
   <div id="nav">
     <ul>
       <li><a href="http://ualr.edu" title="UA Little Rock">UALR</a></li>
-      <li><a href="https://blackboard.ualr.edu/ultra/courses/_278510_1/outline">Course Homepage</a></li>
-      <li><a href="https://www.whitekissesgreatdanerescue.com/">White Kisses Great Dane Rescue</a></li>
-      <li><a href="https://www.littlerock.gov/">Little Rock</a></li>
+      <li><a href="https://blackboard.ualr.edu/ultra/courses/_278510_1/outline" title="Blackboard Course Page">Course Homepage</a></li>
+      <li><a href="https://www.whitekissesgreatdanerescue.com/" title="White Kisses Great Dane Rescue">White Kisses Great Dane Rescue</a></li>
+      <li><a href="https://www.littlerock.gov/" title="City of Little Rock">Little Rock</a></li>
     </ul>
   </div>
   <div id="content">
@@ -49,10 +49,10 @@
 </dl>  
     </p>
 
-    <h4>Provide an example of link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </h4>
+    <h4>Provide an example of a link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </h4>
 
-    <p>Answer goes here... </p>
-    
+    <p>My favorite site can be found by clicking here </p>
+
   </div>
   <div id="footer">
     <h6>&copy; 2025 |Melissa Ecker | <a href="#top">Back to Top</a></h6>
