html css review fix

--- a/web-1/index.html
+++ b/web-1/index.html
@@ -51,11 +51,13 @@
 
     <h4>Provide an example of a link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </h4>
 
-    <p>My favorite site can be found by clicking here </p>
+    <p>My favorite site can be found by clicking 
+      <a class="fav-link" href="https://www.whitekissesgreatdanerescue.com/" 
+      title="White Kisses Great Dane Rescue">here</a>. </p>
 
   </div>
   <div id="footer">
-    <h6>&copy; 2025 |Melissa Ecker | <a href="#top">Back to Top</a></h6>
+    <h6>&copy; 2025 |Melissa Ecker | <a class="top" href="#top">Back to Top</a></h6>
     <h6>Footer</h6>
   </div>
 </div>
