fixes from html validator

--- a/web-1/index.html
+++ b/web-1/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
     <head>
     <meta charset="UTF-8">
@@ -24,7 +25,7 @@
     <h2>My Assessment</h2>
     <p>
       
-      <img alt="Globe with maps" src="assets/images/webpage-image.jpg" /> The most important goal of effective communication is clarity. Clarity is not the same as simplicity . Often, simple things are clear if the message is intended to be brief and small, but often the message is about a complex relationship that can only be presented with a necessarily large amount of data. </p>
+      <img alt="Globe with maps" src="assets/images/webpage-image.jpg"> The most important goal of effective communication is clarity. Clarity is not the same as simplicity . Often, simple things are clear if the message is intended to be brief and small, but often the message is about a complex relationship that can only be presented with a necessarily large amount of data. </p>
 
     <p class="alert"> This complexity can be made to appear clear by effective organization and presentation and need not be reduced to meaningless "bite-sized" chunks of data, as simplification usually does. </p>
 
@@ -40,14 +41,14 @@
 
     <h4>Please provide an example below of how to markup a definition from the dictionary.</h4>
 
-    <p>Example: 
+    <p>Example:</p>
     <dl>
   <dt>Java</dt>
   <dd>A high-level, object-oriented programming language used for building applications.</dd>  
   <dt><dfn title="A high-level, object-oriented programming language">Java</dfn></dt>
   <dd>The programming language widely used for web, desktop, and mobile applications.</dd>
 </dl>  
-    </p>
+    
 
     <h4>Provide an example of a link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </h4>
 
