--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@
               demonstrate how network concepts are implemented in practice.</p>
 
         <strong>BINS 3307 - Systems Development Methodologies</strong>
-        <p class="shift">Methods, tools and techniques of system development. Study the system development life cycle using traditional and nontraditional methods. Development tools will be explored as well as key development techniques for system analysis and design.</p>
+        <p class="shift">Methods, tools and techniques of system development. Study the system development life cycle using 
+            traditional and nontraditional methods. Development tools will be explored as well as key development techniques 
+            for system analysis and design.</p>
 
         <strong>IFSC 3330 - Current Trends in Database Technology (Oracle)</strong>
         <p class="shift">Current trends in database design and
@@ -210,11 +212,18 @@
               data mining, data warehousing, and web search engine technology. Discussion of database management
               and distributed database management issues.</p>
 
-               <strong>IFSC 3342 - Mobile Web Development</strong>
-        <p class="shift">In-depth look at modem web technologies used in the creation of standards-based websites for use on desktop and mobile devices. Evaluate and test many approaches in an effort to establish maintainable workflows and create highly usable sites using a “Mobile First” design philosophy. Explore various tools for testing  versioning and distributing project assets.</p>
+        <strong>IFSC 3342 - Mobile Web Development</strong>
+        <p class="shift">In-depth look at modem web technologies used in the creation of standards-based websites for 
+            use on desktop and mobile devices. Evaluate and test many approaches in an effort to establish maintainable 
+            workflows and create highly usable sites using a “Mobile First” design philosophy. Explore various tools for 
+            testing  versioning and distributing project assets.</p>
               
         <strong>IFSC 4330 - Database Security (Oracle)</strong>
-        <p class="shift"> Focus on security issues in databases systems and introduction of how current and future commercial systems may be designed to ensure secrecy and     confidentiality. Topics include security models, basic security mechanisms and software, statistical database security, intrusion detection, security models for next generation databases, tested techniques and proven strategies for securing an Oracle environment — from the operating system to the database to the network, and how to implement security using Oracle’s built-in tools.</p>
+        <p class="shift"> Focus on security issues in databases systems and introduction of how current and future commercial 
+            systems may be designed to ensure secrecy and confidentiality. Topics include security models, basic security 
+            mechanisms and software, statistical database security, intrusion detection, security models for next generation 
+            databases, tested techniques and proven strategies for securing an Oracle environment — from the operating system 
+            to the database to the network, and how to implement security using Oracle’s built-in tools.</p>
 
          <strong>BINS 4331 - Management of Information Resources</strong>
         <p class="shift"> A study of a manager’s role and decisions
@@ -223,7 +232,8 @@
               the Graduate Catalog as BINS 5331</p>
 
         <strong>BINS 4350 - Business Database Management Systems</strong>
-        <p class="shift">Concepts and principles underlying the design and application of relational database management systems. Provides an in-depth study of the key concepts of relational database systems.</p>
+        <p class="shift">Concepts and principles underlying the design and application of relational database management systems. 
+            Provides an in-depth study of the key concepts of relational database systems.</p>
 
         <strong>IFSC 4396/4398 - Capstone Project I/II</strong>
         <p class="shift">Capstone course in which students do an analysis and design
@@ -406,7 +416,13 @@
     <!-- Begin Database Examples -->
     <div id="Database" class="tabcontent">
         <h2>Database Project 1</h2>
+        <p>This project was a group assignment to demonstrate proficiency in developing a database. Business objectives were listed followed by an entity relationship diagram, a relational model with primary and foreign keys specified, confirmation of 3NF, SQL code to create tables and insert tuples, and SQL queries to test the database.</p>
+        <a href="assets/resources/eckerCTDBTFinalReport.pdf" download>Car Rental Database Project pdf</a>
+       <br>
+
         <h2>Database Project 2</h2>
+        <p>This PL/SQL project was to demonstrate how to create a stored procedure and a stored function in Oracle Apex.</p>
+        <a href="assets/resources/eckerPLSQLProject.pdf" download>PL/SQL Project pdf</a>
     </div>
 
     <!-- Begin Programming Examples -->
