--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <p class="profile-text">  
     
-    I am a former legal professional with over twenty years of experience in research, problem-solving, and client communication, now pursuing a second career in the technology industry. I bring a strong foundation in software development, cybersecurity, and database systems, supported by an A.S. in Computer Information Systems and ongoing studies toward a B.S. in Information Science at UALR (graduating May 2026). I'm driven, detail-oriented, and committed to applying my analytical mindset and adaptability to help organizations develop secure, efficient, and reliable technology solutions.
+    I am a former legal professional with over twenty years of experience in research, problem-solving, and client communication, now pursuing a second career in the technology industry. I bring a strong foundation in software development, cybersecurity, and database systems, supported by an Associate of Science Degree in Computer Information Systems and ongoing studies toward a Bachelor of Science in Information Science at UALR (graduating May 2026). I am driven, detail-oriented, and committed to applying my analytical mindset and adaptability to help organizations develop secure, efficient, and reliable technology solutions.
     </p>         
     </div> </div>
 
@@ -255,7 +255,7 @@
         <a href="assets/resources/Melissa_Ecker_Resume.pdf" download>pdf</a> format.</p>
 
         <h2>Career Objectives</h2>
-        <p>Aspiring software and database engineer transitioning into the IT field after more than twenty years of professional experience in the legal industry. Skilled in analytical research, technical writing, problem-solving, and managing complex workflows with accuracy and efficiency. Currently completing a B.S. in Information Science with strong academic performance. Proficient in multiple programming languages, development tools, and database technologies. Recognized for reliability, adaptability, attention to detail, and a collaborative team mindset.</p>
+        <p>Aspiring software and database engineer transitioning into the IT field after more than twenty years of professional experience in the legal industry. Skilled in analytical research, technical writing, problem-solving, and managing complex workflows with accuracy and efficiency. Currently completing a Bachelor of Science in Information Science with strong academic performance. Proficient in multiple programming languages, development tools, and database technologies. Recognized for reliability, adaptability, attention to detail, and a collaborative team mindset.</p>
 
         <h2>Technical Skills</h2>
     <ul>
