--- a/web-1/index.html
+++ b/web-1/index.html
@@ -11,7 +11,7 @@
 <body>
    <div id="container">
   <div id="header">
-    <h1><a href="index.html">HTML/CSS Review</a></h1>
+    <h1><a href="index.html">Melissa Ecker</a></h1>
   </div>
   <div id="nav">
     <ul>
