fix UV Index Tool

--- a/uvIndexTracker/index.html
+++ b/uvIndexTracker/index.html
@@ -22,14 +22,14 @@
 
         <br>
 
-        <!-- ZIP Code Input -->
+        <!-- Zip Code Input -->
         <label for="location" class="formlabel">Enter a City or ZIP Code: </label>
         <input type="text" id="location" name="location" placeholder="e.g., 72023 or Cabot">
         <label class="error" id="locationerror"></label>
 
         <br><br>
 
-        <!-- Show Results and Clear Buttons -->
+        <!-- Display Results and Clear Buttons -->
         <input type="button" value="Display UV Data" name="DisplayUVData" onclick="displayUVData()">
         <input type="button" value="Clear Form" name="Clear" onclick="clearForm()">
 
