style uv tracker

--- a/index.html
+++ b/index.html
@@ -463,7 +463,9 @@
         <h2>Capstone Project</h2>
         <a href="assets/resources/projectCharter.pdf"=>Project Charter</a>
         <br>
-        <a href="assets/resources/projectAnalysisDesign.pdf"=>Project Analysis and Design</a>
+        <a href="assets/resources/projectAnalysisDesign1.pdf"=>Project Analysis and Design</a>
+        <br>
+        <a href=assets/resources/projectAnalysisDesign.pdf=>Final Project Report</a>
         <br>
         <a href="uvIndexTracker/index.html"=>UV Index Tracker Tool</a>
 
