--- a/uvIndexTracker/index.html
+++ b/uvIndexTracker/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="JavaScript, HTML, CSS">
     <meta name="author" content="Melissa Ecker">
     <title>UV Index Tracker Tool</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="assets/CSS/stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
@@ -18,6 +18,8 @@
 <body>
     <form id="myform" onsubmit="return false;">
     <div class="formcontainer">
+
+        <div class="topPanel">
         <h2>UV Index Tracker Tool</h2>
 
         <br>
@@ -30,9 +32,11 @@
         <br><br>
 
         <!-- Display Results and Clear Buttons -->
-        <input type="button" value="Display UV Data" name="DisplayUVData" onclick="displayUVData()">
-        <input type="button" value="Clear Form" name="Clear" onclick="clearForm()">
-
+        <div class="button-row">
+        <input type="button" value="Display UV Data" onclick="displayUVData()">
+        <input type="button" value="Clear Form" onclick="clearForm()">
+        </div>
+    </div>
         <hr>
 
         <!-- Chart Container -->
