add final report pdf

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <br>
         <a href="assets/resources/projectAnalysisDesign1.pdf"=>Project Analysis and Design</a>
         <br>
-        <a href=assets/resources/projectAnalysisDesign.pdf=>Final Project Report</a>
+        <a href="assets/resources/finalProjectReport.pdf"=>Final Project Report</a>
         <br>
         <a href="uvIndexTracker/index.html"=>UV Index Tracker Tool</a>
 
