add powerpoint pdf

--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@
         <br>
         <a href="assets/resources/finalProjectReport.pdf"=>Final Project Report</a>
         <br>
+        <a href="assets/resources/uvIndexProjectPresentation.pdf"=>Final Project PowerPoint Presentation</a>
+        <br>
         <a href="uvIndexTracker/index.html"=>UV Index Tracker Tool</a>
 
 
