add soft skills project and new resume

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
     <!-- Begin Resume Section -->
     <div id="Resume" class="tabcontent">
         <h2>Resume</h2>
-        <p>Download my resume in <a href="assets/resources/Melissa_Ecker_Resume_2025.docx" download>Microsoft Word</a> or
-        <a href="assets/resources/Melissa_Ecker_Resume_2025.pdf" download>pdf</a> format.</p>
+        <p>Download my resume in <a href="assets/resources/eckerResume12.2025.docx" download>Microsoft Word</a> or
+        <a href="assets/resources/eckerResume12.2025.pdf" download>pdf</a> format.</p>
 
         <h2>Career Objectives</h2>
         <p>Aspiring software and database engineer transitioning into the IT field after more than twenty years of professional experience in the legal industry. Skilled in analytical research, technical writing, problem-solving, and managing complex workflows with accuracy and efficiency. Currently completing a Bachelor of Science in Information Science with strong academic performance. Proficient in multiple programming languages, development tools, and database technologies. Recognized for reliability, adaptability, attention to detail, and a collaborative team mindset.</p>
@@ -454,6 +454,10 @@
         <h2>Soft Skills Project 1</h2>
         <p>In an ethics course, I was tasked with discussing the ethics of social robots in dementia care. Attached is my essay in that regard that hightlights my ability to analyze the intersection of technology and palliative care with practicality and compassion.</p>
         <a href="assets/resources/eckerEthicalReasoningSocialRobots.pdf"=>Ethical Reasoning in the Use of Social Robots for Dementia Care</a>
+
+        <h2>Soft Skills Project 2</h2>
+        <p>This report was a final project in ethics. I performed an in-depth analysis into the ethics--or lack thereof--surrounding Academy at Ivy Ridge. This report showcases my ability to research and analyze complex ethical situations.</p>
+        <a href="assets/resources/eckerIvyRidgeAnalysis.pdf"=>Ethical Analysis of the Academy at Ivy Ridge: Narrative, Abuse, and Accountability in the Troubled Teen Industry</a>
 
         <!--<p>As I begin my career in the IT industry, I recognize that strong soft skills are just as important as technical ability. I bring clear communication, curiosity, and a collaborative mindset to every project, which helps me learn from others and contribute meaningfully to team goals. I am adaptable when facing new technologies or complex challenges, and I approach problem-solving with patience and persistence. I also value professionalism, reliability, and a willingness to ask thoughtful questions—all of which support my growth as a new IT professional and help me build positive working relationships in fast-paced technical environments.</p>-->
     </div>
