--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
  <h2>Education</h2>
     <!-- Degree #1 -->
-        <h3>Bachelor of Science in Information Science</h3>
+        <h3>Bachelor of Science in Information Science (May 2026)</h3>
         <div itemscope itemtype="http://schema.org/EducationalOrganization">
             <span itemprop="name">University of Arkansas at Little Rock</span> - <a itemprop="url" href="https://ualr.edu/" title="University of Arkansas">www.ualr.edu</a><br>
             <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
