add new project

--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
         <a href="assets/resources/eckerEthicalReasoningSocialRobots.pdf"=>Ethical Reasoning in the Use of Social Robots for Dementia Care</a>
 
         <h2>Soft Skills Project 2</h2>
-        <p>This report was a final project in ethics. I performed an in-depth analysis into the ethics--or lack thereof--surrounding Academy at Ivy Ridge. This report showcases my ability to research and analyze complex ethical situations and develop a comprehensive report of my findings.</p>
-        <a href="assets/resources/eckerIvyRidgeAnalysis.pdf"=>Ethical Analysis of the Academy at Ivy Ridge: Narrative, Abuse, and Accountability in the Troubled Teen Industry</a>
+        <p>This report was a final group project in a writing class. This project showcases my ability to work in a group, plan and execute a team endeavor, and develop a cohesive and meaningful document that addresses a real world problem in my local community.</p>
+        <a href="assets/resources/groupProjectHomelessness.pdf"=>Homelessness and Mental Health in Little Rock, Arkansas</a>
 
         <!--<p>As I begin my career in the IT industry, I recognize that strong soft skills are just as important as technical ability. I bring clear communication, curiosity, and a collaborative mindset to every project, which helps me learn from others and contribute meaningfully to team goals. I am adaptable when facing new technologies or complex challenges, and I approach problem-solving with patience and persistence. I also value professionalism, reliability, and a willingness to ask thoughtful questions—all of which support my growth as a new IT professional and help me build positive working relationships in fast-paced technical environments.</p>-->
     </div>
