add classes to education

--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
         <p class="shift">In-depth study of building user interfaces; user
               requirements, design, aesthetics, and programming.</p>
 
+        <strong>CPSI 23803 - Machine Learning/AI Fundamentals</strong>
+        <p class="shift">This course covers the foundations of of ML theory ... students will be exposed to the design of data driven intelligent solutions through hands-on activities covering a number of algorithms as well as tasks invovled in any model engineering pipeline.</p>
+
         <strong>IFSC 3300 - Web Client Applications (Javascript)</strong>
         <p class="shift">A hands-on course focusing on the technologies and
               concepts for creating dynamic and interactive web sites with a special emphasis on client-side
