add cap II charter

--- a/index.html
+++ b/index.html
@@ -486,6 +486,14 @@
         <br>
         <a href="uvIndexTracker/index.html"=>UV Index Tracker Tool</a>
 
+        <h2>Capstone II Project</h2>
+    
+        <p><strong>Arkansas Film Database</strong></p>
+
+        <p>Intro</p>
+
+        <a href="assets/resources/Arkansas-Film-Database-Project-Charter.pdf"=>Project Charter</a>
+
 
 
 
