update class info

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               communication, scheduling, virtual memory, device management, input/output, secondary storage and
               file management, and protection.</p>
               
-        <strong>IFSC 2340 - Human Computer Interface (Java)</strong>
+        <strong>IFSC 2340 - Human Computer Interface (Figma)</strong>
         <p class="shift">In-depth study of building user interfaces; user
               requirements, design, aesthetics, and programming.</p>
 
@@ -264,7 +264,7 @@
         <h2>Technical Skills</h2>
     <ul>
         <li><strong>Programming Languages:</strong> Java, Python, C++, HTML5, CSS, JavaScript, SQL, PL/SQL</li>
-        <li><strong>Databases &amp; Tools:</strong> Oracle, Oracle APEX, Microsoft SQL Server, GitHub, Eclipse, Visual Studio</li>
+        <li><strong>Databases &amp; Tools:</strong> Oracle, Oracle APEX, Microsoft SQL Server, GitHub, Eclipse, Visual Studio, Figma, BootStrap</li>
         <li><strong>Operating Systems:</strong> Linux (Ubuntu), Microsoft Windows</li>
         <li><strong>Productivity Software:</strong> Microsoft Office Suite (Word, Excel, Outlook, PowerPoint, Access), WordPerfect Legal</li>
     </ul>
