changes to portfolio

--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
 
     <!-- Begin Soft Skills -->
     <div id="SoftSkills" class="tabcontent">
-        <h2>Soft Skills Project 1</h2>
+        <!--<h2>Soft Skills Project 1</h2>
         <p>In an ethics course, I was tasked with discussing the ethics of social robots in dementia care. Attached is my essay in that regard that hightlights my ability to analyze the intersection of technology and palliative care with practicality and compassion.</p>
-        <a href="assets/resources/eckerEthicalReasoningSocialRobots.pdf"=>Ethical Reasoning in the Use of Social Robots for Dementia Care</a>
+        <a href="assets/resources/eckerEthicalReasoningSocialRobots.pdf"=>Ethical Reasoning in the Use of Social Robots for Dementia Care</a> -->
 
-        <h2>Soft Skills Project 2</h2>
+        <h2>Soft Skills Project</h2>
         <p>This report was a final group project in a writing class. This project showcases my ability to work in a group, plan and execute a team endeavor, and develop a cohesive and meaningful document that addresses a real world problem in my local community.</p>
         <a href="assets/resources/groupProjectHomelessness.pdf"=>Homelessness and Mental Health in Little Rock, Arkansas</a>
 
