add info and start working on Arkansas Film Database shells

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="tablinks" onclick="openTab(event, 'Database')">Database Examples</a>
                 <a class="tablinks" onclick="openTab(event, 'Programming')">Programming</a>
                 <a class="tablinks" onclick="openTab(event, 'SoftSkills')">Soft Skills</a>
-                <a class="tablinks" onclick="openTab(event, 'Capstone')">Capstone Project</a>
+                <a class="tablinks" onclick="openTab(event, 'Capstone')">Capstone Projects</a>
             </div>
         </div> 
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
@@ -497,9 +497,17 @@
     
         <p><strong>Arkansas Film Database</strong></p>
 
-        <p>Intro</p>
+        <p>The Arkansas Film Database project was initiated by the Arkansas Economic Development Group to promote the film industry in Arkansas and to shine a light on the contributions of Arkansas to film and television production. The project will deliver a proof-of-concept website showcasing films, actors, and actresses with verifiable ties to the state of Arkansas.</p>
 
         <a href="assets/resources/Arkansas-Film-Database-Project-Charter.pdf"=>Project Charter</a>
+        <br>
+        <a href=""=>Project Analysis and Design</a>
+        <br>
+        <a href=""=>Final Project Report</a>
+        <br>
+        <a href=""=>Final Project PowerPoint Presentation</a>
+        <br>
+        <a href="arkansasFilmDatabaseProject/index.html"=>Arkansas Film Database Project</a>
 
 
 
