add search button

--- a/arkansasFilmDatabaseProject/index.html
+++ b/arkansasFilmDatabaseProject/index.html
@@ -26,6 +26,16 @@
       <button id="filmsBtn">Films</button>
       <button id="peopleBtn">Actors / Actresses</button>
     </div>
+    <div class="search-wrap">
+  
+  <input
+    type="text"
+    id="searchInput"
+    name="searchInput"
+    placeholder="Search films, actors, actresses..."
+    autocomplete="off"/>
+  <button type="button" id="searchBtn">Search</button>
+</div>
   </div>
 </div>
 </main>
